--- a/index.html
+++ b/index.html
@@ -4,15 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="style.css" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
     <title>Instagram but not really instagram</title>
 </head>
 <body>
     <div class="container">
         <header>
             <img class="profilePic" src="profile_pic.jpg" alt="Photo by Mike Meyers on Unsplash">
+            <div class="textProfilePic">
+                <p class="stronger">SuperPhotographe.com</p>
+                <p>Paris - Place de la Nation</p>
+            </div>
         </header>
-        <figure></figure>
-        <figcation></figcation>
+        <figure>
+            <img src="post_pic.jpg" alt="Photo de feu d'artifices dans la ville de Genève">
+        </figure>
+        <div class="engagementZone">
+            <img id="coeur" src="http://learn.artw.fr/ecv/b2/tp091219/heart.svg">
+            <p><span id="heartCounter">2</span> utilisateurs ont aimé cette publication</p>
+        </div>
+        <figcaption>
+            <p class="stronger">SuperPhotographe.com</p>
+            <p>SuperPhotographe est là pour immortaliser les meilleurs moments de votre vie personnelle ou en entreprise.</p>
+            <p>Un jour de grève ? Un mariage ?</p>
+            <p>Nous sommes là pour réaliser vos plus beaux clichés !</p>
+            <p>Nous nous déplaçons sur la France entière, contactez-nous sur...</p>
+        </figcaption>
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
